--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,7 @@
         <div class="collaps navbar-collaps pull-right">
             <ul  class="nav navbar-nav">
             <li>{% if username %}
-                <li><form action="/serch/" method="POST">
+                <li><form action="/serch2/{{serch_id}}" method="post">
                 {% csrf_token %}
                     <input id="serch_id" name="serch_id" type="text">
                     <button type="submit" class="btn">поиск</button>
